# laptop-setup

./: .editorconfig  README.md  pyproject.toml
ansible/: requirements.yml  setup.yml  work.yml
ansible/group_vars/home/: all.yml
ansible/group_vars/work/: all.yml
ansible/inventory/: home.yml  work.yml
ansible/roles/git/defaults/: main.yml
ansible/roles/git/files/: gitignore
ansible/roles/git/tasks/: main.yml
ansible/roles/omz/defaults/: main.yml
ansible/roles/omz/tasks/: main.yml
ansible/roles/omz/templates/: zshrc.j2
ansible/roles/rvm/defaults/: main.yml
ansible/roles/rvm/files/: rvm.sh
ansible/roles/rvm/tasks/: main.yml
ansible/roles/zsh/defaults/: main.yml
ansible/roles/zsh/files/: nvm.sh
ansible/roles/zsh/tasks/: main.yml
ansible/roles/zsh/templates/: aliases.sh.j2  laptop-setup.sh.j2  zshrc.j2
scripts/: ansible.sh
