[tool.poetry]
name = 'laptop-setup'
version = '0.1.0'
description = ''
authors = ['James Armes <jarmes@codeforamerica.org>']
readme = 'README.md'
packages = [{include = 'laptop_setup'}]

[tool.poetry.dependencies]
python = '^3.11'
ansible = '~7.5'


[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
