[tool.poetry]
name = 'laptop-setup'
version = '0.1.0'
description = ''
authors = ['James Armes <jarmes@codeforamerica.org>']
readme = 'README.md'
package-mode = false

[tool.poetry.dependencies]
python = '^3.9'
ansible = '~8.5'
molecule = '~5.0'
molecule-docker = '~2.1'

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
